Small fixes to widget formatting & content... Add spacing betwen widget list elems. Fix link in Atlas_Conquerors.md

--- a/css/components/_widget.scss
+++ b/css/components/_widget.scss
@@ -8,6 +8,13 @@
         gap: 0.35em;
     }
 
+    & ul,
+    & ol {
+        display: flex;
+        flex-direction: column;
+        gap: 0.2em;
+    }
+
     background-color: var(--color-base-2);
     border-radius: 0.5rem;
     padding: 0.35rem;
